# orbit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
data/: README.md
data/outputs/round-1-seeds/: test.jsonl
data/outputs/round-2-qa-pairs/: responses_test.jsonl
data/round-1-seed-creation/: README.md  create_seeds.py
data/round-1-seed-creation/wikipedia-categories/: art.txt  code.txt  finance.txt  geography.txt  history.txt  law.txt  mathematics.txt  medicine.txt  music.txt  politics.txt  puzzles.txt  science_and_technology.txt  sports.txt  tv_shows_and_movies.txt  video_games.txt
data/round-2-qa-generation/: README.md  deepseek_generate_qa.py  deepseek_generate_qa.sh
data/round-3-self-verification/: README.md  deepseek_self_verify.py  deepseek_self_verify.sh
data/round-4-external-verification/: README.md  external_verification.py  external_verification.sh  scrape_documents.py
models/data_process/: README.md  prepare_eval_data.py  prepare_test_data.py  prepare_train_data.py
models/eval/: README.md  build_retriever_index.py  merge_index_shards.py  retrieval_server_bge.py  retrieval_server_bge.sh  run_eval.sh
models/train/: README.md  ddgs_web_search.py  ddgs_web_search.sh  model_merge_upload_hf.sh  run_grpo.sh  test_retriever.py
